# ImplementingSearch

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
.github/workflows/: cancel.yml  ci_linux.yml
lib/libdivsufsort/: .gitrepo
results/: time.rtf
src/: CMakeLists.txt  fmindex_construct.cpp  fmindex_pigeon_search.cpp  fmindex_search.cpp  naive_search.cpp  suffixarray_search.cpp
